# mellea-dev-rel-agent

./: .env.example  .gitignore  README.md  TESTING.md  TYPE_CHECKING.md  config.yml  mellea-devrel-implementation-plan-phase3.md  mellea-devrel-implementation-plan-phase5.md  pyproject.toml
.github/workflows/: ci.yml  manual_dispatch.yml  monitor_weekly.yml  on_release.yml
agents/content/: blog_outline.py  personal_blog.py  social_post.py  suggest.py  technical_blog.py
agents/demo/: __init__.py  code_gen.py  ideation.py  packager.py  pipeline.py  test_runner.py
agents/docs/: reviewer.py  writer.py
agents/monitor/: __init__.py  mentions.py  publications.py  report.py
agents/tracker/: __init__.py  log_asset.py  sync.py
cli/: main.py
cli/commands/: content.py  demo.py  docs.py  monitor.py  tracker.py
core/: briefs.py  config.py  context_resolver.py  github_client.py  hooks.py  llm_client.py  models.py  output.py  pipeline.py  skill_loader.py
core/mention_sources/: __init__.py  github_discussions.py  hackernews.py  linkedin.py  pypi.py  reddit.py  registry.py  stackoverflow.py  twitter.py
design/: mellea-devrel-agents-design.md  mellea-devrel-implementation-plan-phase1.md  mellea-devrel-implementation-plan-phase2.md  mellea-devrel-implementation-plan-phase4.md
skills/content/: blog-outline.md  de-llmify.md  linkedin-conventions.md  personal-blog.md  social-post.md  suggest.md  (+2 more)
tests/: test_briefs.py  test_config.py  test_context_resolver.py  test_github_client.py  test_hooks.py  test_llm_client.py  test_output.py  test_pipeline.py  test_skill_loader.py
(+56 files in other folders)
